--- a/med_app/templates/med_app/index.html
+++ b/med_app/templates/med_app/index.html
@@ -1,5 +1,28 @@
 {% extends 'med_app/main.html' %}
+{% load static %}
 {% block content %}
+<div class="container-fluid gradient-custom py-5" style="height: 100vh  ">
+    <div class="container mt-5" >
+        <div class="row">
+            <div class="col-sm my-auto">
+
+                <h3 class="text-light">Cuidar da sua saúde nunca foi tão fácil</h3>
+                <h6 class="text-light">Com a Conncare você faz suas consultas com diversos profissionais da saúde de forma rápida e segura no conforto de sua casa.</h6>
+                <button type="button" class="btn btn-rounded btn-light me-3">
+                    <p class="m-0 p-0">Entrar</p>
+                </button>
+            </div>
+
+            <div class=" col-sm" >
+                <img src="{% static 'images/banner.png' %}" height="550  ">
+            </div>
+        </div>
+    </div>
+
+
+
+
+</div>
 <div style="height: 100vh">
     <div class="flex-center flex-column">
       <h1 class="animated fadeIn mb-4">Home <i class="fa fa-heart red-text"></i></h1>
