--- a/med_app/static/css/styles.css
+++ b/med_app/static/css/styles.css
@@ -9,16 +9,18 @@
   background: linear-gradient(to left, rgba(55, 236, 186, 1), rgba(114, 175, 211, 1));
 }
 
-.agendar-tamanho{
-    height: 50vh;
-}
+
 
 .branco{
     background-color: #ffffff;
 }
 
+.agendartamanho{
+    height: 1vh;
+}
+
 .meio-verde{
-    margin-top: -10vh!important;
+    margin-top: 10vh!important;
 }
 
 @font-face {
@@ -48,6 +50,14 @@ body{
 @media only screen and (max-width: 600px) {
   .div-tamanho{
     height: 100vh;
+}
+
+    .meio-verde{
+    margin-top: -40vh!important;
+}
+
+.tamanhoagendar{
+    height: 0vh;
 }
 }
 
