--- a/med_app/templates/med_app/agendar-confirmar.html
+++ b/med_app/templates/med_app/agendar-confirmar.html
@@ -10,30 +10,29 @@
         <div class="row my-5 ">
             <div class=" col-9 ">
                 <div class="container p-5  bg-light rounded">
-                    <h4 class="text-start ">Contato:</h4>
-                    <div class=" text-black-50 form-outline mb-4">
-                        <input type="email" id="form3Example3" class="form-control p-2" placeholder="Telefone (ex: +55 11 99999 9999)" />
+                    <h4 class="text-start ">Código de Confirmação:</h4>
+                    <div class=" text-black-50 form-outline mb-2">
+                        <input type="number" id="form3Example3" class="form-control p-2" placeholder="Insira o código enviado ao número de celular designado préviamente" />
 
                     </div>
-                    <p class="text-start text-black-50">Ao agendar sua consulta, um código será enviado para este número, confirmando o agendamento</p>
-                    <h4 class="text-start mt-5 ">Informações Adicionais:</h4>
-                    <div class="form-outline mb-4">
-                     <textarea class="form-control" id="form4Example3" rows="4" placeholder="Utilize esse campo para indicar ao profissional qualquer informação adicional que você queria que ele saiba antes da consulta"></textarea>
-
+                    <div class="text-end mb-4">
+                        <a  href="">Não recebi nenhum código</a>
                     </div>
+
+
                     <div class="row text-center">
                         <div class="col-6 my-auto">
-                            <button type="submit" class="  px-5 text-center btn rounded btn-red  ">Cancelar</button>
+                            <button type="submit" class=" text-center btn px-5 rounded btn-red  ">Voltar</button>
                         </div>
                         <div class="col-6 my-auto">
-                            <button type="submit" class=" px-5  text-center btn rounded btn-blue  ">Continuar</button>
+                            <button type="submit" class=" text-center btn px-5 rounded btn-blue ">Agendar</button>
                         </div>
                     </div>
 
 
                 </div>
             </div>
-            <div class="col-3  ">
+            <div class="col-3 bg-light rounded ">
                 <div class="container bg-light rounded p-4">
                     <div class="row ">
                         <div class="col-4">
