--- a/med_app/templates/med_app/logado-com-historico.html
+++ b/med_app/templates/med_app/logado-com-historico.html
@@ -22,30 +22,33 @@
                                 <div class="col-4 ">
                                     <img class="rounded " src="{% static 'images/minha_foto.jpg' %}" alt="" height="100">
                                 </div>
-                                <div class="col-8 ">
+                                <div class="col-8 my-auto ">
                                     <h5>Nome e Sobrenome</h5>
                                     <h6 class="text-black-50">Especialização</h6>
 
                                 </div>
                             </div>
-                            <h6 class="mt-3">Informações Adicionais:</h6>
-                            <p class="text-black-50"> Aqui será o que o paciente escrever durante o agendamento da consulta, para lembra-lo caso tenha esquecido...</p>
+                        <div class="text-center">
+                             <button class="  btn btn-sm btn-rounded btn-blue">Chat</button>
+                </div>
+
                         </div>
                         <div class="col-4">
                             <div class="row">
                                 <div class="col-1">
-                                    <div class="hr-vertical"></div>
+                                    <div class="hr-vertical-historico"></div>
                                 </div>
                                  <div class="col-10 text-center my-auto">
-                                     <h6>16 de Maio</h6>
-                                     <h6 class="text-black-50">Domingo</h6>
-                                     <p class="border rounded text-black-50">16:00</p>
-                                     <button class=" m-0 btn btn-sm btn-rounded btn-blue">Entrar</button>
+                                     <h6>12 de Maio às 12:00</h6>
+                                     <h6 class="text-black-50">2 semanas atrás</h6>
+
+                                     <button class=" m-0 btn btn-sm btn-rounded btn-blue">Avaliar</button>
                                  </div>
                             </div>
 
                         </div>
                     </div>
+
 
             </div>
             <div class="col-lg-5 col-sm-12 my-4 shadow bg-light p-4 container   rounded border">
@@ -55,30 +58,33 @@
                                 <div class="col-4 ">
                                     <img class="rounded " src="{% static 'images/minha_foto.jpg' %}" alt="" height="100">
                                 </div>
-                                <div class="col-8 ">
+                                <div class="col-8 my-auto ">
                                     <h5>Nome e Sobrenome</h5>
                                     <h6 class="text-black-50">Especialização</h6>
 
                                 </div>
                             </div>
-                            <h6 class="mt-3">Informações Adicionais:</h6>
-                            <p class="text-black-50"> Aqui será o que o paciente escrever durante o agendamento da consulta, para lembra-lo caso tenha esquecido...</p>
+                        <div class="text-center">
+                             <button class="  btn btn-sm btn-rounded btn-blue">Chat</button>
+                </div>
+
                         </div>
                         <div class="col-4">
                             <div class="row">
                                 <div class="col-1">
-                                    <div class="hr-vertical"></div>
+                                    <div class="hr-vertical-historico"></div>
                                 </div>
                                  <div class="col-10 text-center my-auto">
-                                     <h6>16 de Maio</h6>
-                                     <h6 class="text-black-50">Domingo</h6>
-                                     <p class="border rounded text-black-50">16:00</p>
-                                     <button class=" m-0 btn btn-sm btn-rounded btn-blue">Entrar</button>
+                                     <h6>12 de Maio às 12:00</h6>
+                                     <h6 class="text-black-50">2 semanas atrás</h6>
+
+                                     <button class=" m-0 btn btn-sm btn-rounded btn-blue">Avaliar</button>
                                  </div>
                             </div>
 
                         </div>
                     </div>
+
 
             </div>
         </div>
