--- a/med_app/templates/med_app/logado-consulta.html
+++ b/med_app/templates/med_app/logado-consulta.html
@@ -21,6 +21,6 @@
        <img src="{% static 'images/load.svg' %}"  alt="">
         <h2 class="my-5">Parece que você não agendou uma consulta ainda... <br> Agende uma e retorne aqui para visualizá-la!</h2>
     </div>
-
+</div>
 
 {% endblock %}
