--- a/med_app/static/css/styles.css
+++ b/med_app/static/css/styles.css
@@ -20,7 +20,7 @@
 }
 
 .meio-verde{
-    margin-top: 10vh!important;
+    margin-top: -10vh!important;
 }
 
 @font-face {
@@ -32,6 +32,21 @@
 
 body{
     font-family: 'Jones-Medium'!important;
+}
+
+.hr-vertical{
+
+    border:none;
+    border-left:1px solid hsla(200, 10%, 50%,100);
+    height:22vh;
+    width:1px;
+}
+
+.hr-vertical-historico{
+    border:none;
+    border-left:1px solid hsla(200, 10%, 50%,100);
+    height:15vh;
+    width:1px;
 }
 
 .btn-light{
@@ -63,6 +78,15 @@ body{
 
 .container-sign {
 max-width: 400px!important;
+width: 100%;
+    padding-right: var(--bs-gutter-x,.75rem);
+    padding-left: var(--bs-gutter-x,.75rem);
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.container-camera {
+max-width: 600px!important;
 width: 100%;
     padding-right: var(--bs-gutter-x,.75rem);
     padding-left: var(--bs-gutter-x,.75rem);
