--- a/med_app/templates/med_app/navbar.html
+++ b/med_app/templates/med_app/navbar.html
@@ -36,21 +36,21 @@
       <!-- Left links -->
 
       <div class="d-flex align-items-center">
-        <div class="dropdown">
+        <div class="dropdown ">
           <a
-            class=" dropdown-toggle"
+            class=" link-light dropdown-toggle mx-2"
             href="#"
             role="button"
             id="dropdownMenuLink"
             data-mdb-toggle="dropdown"
             aria-expanded="false"
           >
-            Dropdown link
+            Cadastro
           </a>
 
           <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-            <li><a class="dropdown-item" href="{% url 'signpaciente' %}">Paciente</a></li>
-            <li><a class="dropdown-item" href="{% url 'signprofissional' %}">Profissional</a></li>
+            <li><a class="dropdown-item" href="{% url 'signpaciente' %}">Paciente </a></li>
+            <li><a class="dropdown-item" href="{% url 'signprofissional' %}">Profissional </a></li>
 
           </ul>
         </div>
