--- a/med_app/templates/med_app/navbar.html
+++ b/med_app/templates/med_app/navbar.html
@@ -55,7 +55,7 @@
           </ul>
         </div>
         <button type="button" class="btn btn-rounded btn-light me-3">
-          <p class="text-button m-0 p-0">Entrar</p>
+          <a class="text-button m-0 p-0" href="{% url 'signin' %}">Entrar</a>
         </button>
 
       </div>
