removing google sign in from sign up patient

--- a/med_app/templates/med_app/signup-paciente.html
+++ b/med_app/templates/med_app/signup-paciente.html
@@ -43,19 +43,19 @@
     <label class="form-label" for="form3Example4">Confirmar Senha</label>
   </div>
 
-    <p class="text-center">Ou</p>
+<!--    <p class="text-center">Ou</p>-->
 
 
-        <button type="submit" class="btn btn-lg mb-4 "><i class="fab fa-google mx-2"></i>Continuar com o Google</button>
+<!--        <button type="submit" class="btn btn-lg mb-4 "><i class="fab fa-google mx-2"></i>Continuar com o Google</button>-->
 
-<p class="text-center">Ao criar uma conta, você está aceitando os Termos de Condições de uso da Conncare e concordando com nossa políticas de privacidade</p>
+<!--<p class="text-center">Ao criar uma conta, você está aceitando os Termos de Condições de uso da Conncare e concordando com nossa políticas de privacidade</p>-->
     <hr>
   <!-- Submit button -->
   <button type="submit" class="btn btn-primary btn-lg mb-4">Criar conta</button>
 
   <!-- Register buttons -->
   <div class="text-center">
-<a class="text-center"> Já possui uma conta?</a>
+<a class="text-center" href="{% url 'signin' %}"> Já possui uma conta?</a>
   </div>
 </form>
     </div>
