--- a/med_app/templates/med_app/navbar.html
+++ b/med_app/templates/med_app/navbar.html
@@ -4,7 +4,7 @@
   <!-- Container wrapper -->
   <div class="container">
     <!-- Navbar brand -->
-    <a class="navbar-brand me-2" href="https://mdbgo.com/">
+    <a class="navbar-brand me-2">
       <img
         src="{% static 'images/logo.svg' %}"
         height="50"
@@ -55,7 +55,7 @@
           </ul>
         </div>
         <button type="button" class="btn btn-rounded btn-light me-3">
-          <a class="text-button m-0 p-0" href="{% url 'signin' %}">Entrar</a>
+          <a class="text-button text-success m-0 p-0" href="{% url 'signin' %}">Entrar</a>
         </button>
 
       </div>
