--- a/med_app/templates/med_app/nav-logado.html
+++ b/med_app/templates/med_app/nav-logado.html
@@ -1,10 +1,12 @@
 {% load static %}
+{% load socialaccount %}
+
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar gradient-custom fixed-top text-light">
   <!-- Container wrapper -->
   <div class="container">
     <!-- Navbar brand -->
-    <a class="navbar-brand me-2" href="https://mdbgo.com/">
+    <a class="navbar-brand me-2">
       <img
         src="{% static 'images/logo.svg' %}"
         height="50"
@@ -30,35 +32,18 @@
     <!-- Collapsible wrapper -->
     <div class="collapse navbar-collapse" id="navbarButtonsExample">
       <!-- Left links -->
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <a class="dropdown-item" href="{% url 'agendar' %}"> Agendar </a>
-          <a class="dropdown-item" href="{% url 'consultas' %}"> Consultas </a>
-          <a class="dropdown-item" href="{% url 'historico' %}"> Histórico </a>
+      <ul class="navbar-nav m-auto ">
+          <a class="link-white m-auto mx-3" href="{% url 'agendar' %}"> Agendar </a>
+          <a class="link-white m-auto mx-3" href="{% url 'consultas' %}"> Consultas </a>
+          <a class="link-white m-auto mx-3" href="{% url 'historico' %}"> Histórico </a>
       </ul>
       <!-- Left links -->
 
       <div class="d-flex align-items-center">
-        <div class="dropdown ">
-          <a
-            class=" link-light dropdown-toggle mx-2"
-            href="#"
-            role="button"
-            id="dropdownMenuLink"
-            data-mdb-toggle="dropdown"
-            aria-expanded="false"
-          >
-            Cadastro
-          </a>
 
-          <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-            <li><a class="dropdown-item" href="{% url 'signpaciente' %}">Paciente </a></li>
-            <li><a class="dropdown-item" href="{% url 'signprofissional' %}">Profissional </a></li>
-
-          </ul>
-        </div>
-        <button type="button" class="btn btn-rounded btn-light me-3">
-          <a class="text-button m-0 p-0" href="{% url 'signin' %}">Entrar</a>
-        </button>
+          <button type="button" class="btn btn-rounded btn-light me-3">
+            <a class="text-button m-0 p-0" href="{% url 'account_logout' %}"> Sair </a>
+          </button>
 
       </div>
     </div>
