fix 'sair' link

--- a/med_app/templates/med_app/nav-logado.html
+++ b/med_app/templates/med_app/nav-logado.html
@@ -42,7 +42,7 @@
       <div class="d-flex align-items-center">
 
           <button type="button" class="btn btn-rounded btn-light me-3">
-            <a class="text-button m-0 p-0" href="{% url 'account_logout' %}"> Sair </a>
+            <a class="text-button text-success m-0 p-0" href="{% url 'account_logout' %}"> Sair </a>
           </button>
 
       </div>
