--- a/med_app/templates/med_app/navbar.html
+++ b/med_app/templates/med_app/navbar.html
@@ -49,7 +49,7 @@
           </a>
 
           <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-            <li><a class="dropdown-item" href="{% url 'signpaciente' %}">Paciente </a></li>
+            <li><a class="dropdown-item" href="{% url 'signup_paciente' %}">Paciente </a></li>
             <li><a class="dropdown-item" href="{% url 'signprofissional' %}">Profissional </a></li>
 
           </ul>
