--- a/med_app/templates/med_app/signup-paciente.html
+++ b/med_app/templates/med_app/signup-paciente.html
@@ -1,63 +1,83 @@
-
 {% extends 'med_app/main.html' %}
 {% load static %}
 {% block content %}
 
 <div class="container-fluid gradient-custom p-5 mt-5" style="height: 100vh">
 
-<h1 class="text-center text-light px-5 mt-5">Criar conta como Paciente</h1>
-    <div class="container-signup  p-5 bg-light rounded my-5" >
+    <h1 class="text-center text-light px-5 mt-5">Criar conta como Paciente</h1>
+    <div class="container-signup  p-5 bg-light rounded my-5">
 
 
-<form class="justify-content-center text-center">
-  <!-- 2 column grid layout with text inputs for the first and last names -->
-  <div class="row mb-4">
-    <div class="col">
-      <div class="form-outline">
-        <input type="text" id="form3Example1" class="form-control p-2" />
-        <label class="form-label" for="form3Example1">Nome</label>
-      </div>
-    </div>
-    <div class="col">
-      <div class="form-outline">
-        <input type="text" id="form3Example2" class="form-control p-2" />
-        <label class="form-label" for="form3Example2">Sobrenome</label>
-      </div>
-    </div>
-  </div>
-
-  <!-- Email input -->
-  <div class="form-outline mb-4">
-    <input type="email" id="form3Example3" class="form-control p-2" />
-    <label class="form-label" for="form3Example3">Email</label>
-  </div>
-
-  <!-- Password input -->
-  <div class="form-outline mb-4">
-    <input type="password" id="form3Example4" class="form-control p-2" />
-    <label class="form-label" for="form3Example4">Senha</label>
-  </div>
-
-    <div class="form-outline mb-4">
-    <input type="password" id="confirmarSenha" class="form-control p-2" />
-    <label class="form-label" for="form3Example4">Confirmar Senha</label>
-  </div>
-
-<!--    <p class="text-center">Ou</p>-->
+        <form class="justify-content-center text-center" method="POST">
+            {% csrf_token %}
+              {{ form.non_field_errors }}
 
 
-<!--        <button type="submit" class="btn btn-lg mb-4 "><i class="fab fa-google mx-2"></i>Continuar com o Google</button>-->
+            <!-- 2 column grid layout with text inputs for the first and last names -->
+            <!--  <div class="row mb-4">-->
+            <!--    <div class="col">-->
+            <!--      <div class="form-outline">-->
+            <!--        <input type="text" id="form3Example1" class="form-control p-2" />-->
+            <!--        <label class="form-label" for="form3Example1">Nome</label>-->
+            <!--      </div>-->
+            <!--    </div>-->
+            <!--    <div class="col">-->
+            <!--      <div class="form-outline">-->
+            <!--        <input type="text" id="form3Example2" class="form-control p-2" />-->
+            <!--        <label class="form-label" for="form3Example2">Sobrenome</label>-->
+            <!--      </div>-->
+            <!--    </div>-->
+            <!--  </div>-->
 
-<!--<p class="text-center">Ao criar uma conta, você está aceitando os Termos de Condições de uso da Conncare e concordando com nossa políticas de privacidade</p>-->
-    <hr>
-  <!-- Submit button -->
-  <button type="submit" class="btn btn-primary btn-lg mb-4">Criar conta</button>
+            <div class="form-outline mb-4">
+                <input type="email" id="id_{{form.email.name}}" name="{{form.email.name}}" class="form-control p-2"/>
+                <label class="form-label" for="form3Example3">Email</label>
+                {% for error in form.email.errors %}
+                <p style="color: red">{{ error }}</p>
+                {% endfor %}
+            </div>
 
-  <!-- Register buttons -->
-  <div class="text-center">
-<a class="text-center" href="{% url 'signin' %}"> Já possui uma conta?</a>
-  </div>
-</form>
+            <!-- Password input -->
+            <div class="form-outline mb-4">
+                <input type="password" id="id_{{form.password1.name}}" name="{{form.password1.name}}" class="form-control p-2"/>
+                <label class="form-label" for="form3Example4">Senha</label>
+                {% for error in form.password1.errors %}
+                <p style="color: red">{{ error }}</p>
+                {% endfor %}
+            </div>
+
+            <div class="form-outline mb-4">
+                <input type="password" id="id_{{form.password2.name}}" name="{{form.password2.name}}"  class="form-control p-2"/>
+                <label class="form-label" for="form3Example4">Confirmar Senha</label>
+                {% for error in form.password2.errors %}
+                <p style="color: red">{{ error }}</p>
+                {% endfor %}
+            </div>
+
+
+<!--                <p class="text-center">Ou</p>-->
+<!--                        {% for field in form %}-->
+<!--                        &lt;!&ndash; Email input &ndash;&gt;-->
+<!--                        <div class="form-outline mb-4">-->
+<!--                            {{ field}}-->
+
+<!--                            {% for error in field.errors %}-->
+<!--                            <p style="color: red">{{ error }}</p>-->
+<!--                            {% endfor %}-->
+<!--                        </div>-->
+<!--                        {% endfor %}-->
+            <!--        <button type="submit" class="btn btn-lg mb-4 "><i class="fab fa-google mx-2"></i>Continuar com o Google</button>-->
+
+            <!--<p class="text-center">Ao criar uma conta, você está aceitando os Termos de Condições de uso da Conncare e concordando com nossa políticas de privacidade</p>-->
+            <hr>
+            <!-- Submit button -->
+            <button type="submit" class="btn btn-primary btn-lg mb-4">Criar conta</button>
+
+            <!-- Register buttons -->
+            <div class="text-center">
+                <a class="text-center" href="{% url 'signin' %}"> Já possui uma conta?</a>
+            </div>
+        </form>
     </div>
 </div>
 
